   transport uri (#355)
 - Fallback to matching wsdl lookups to matching when the target namespace is
   empty (#356)
 - Improve the handling of xsd:includes, the default namespace of the parent
   schema is now also used during resolving of the included schema. (#360)
 - Properly propagate the global flag for complex types when an xsd:restriction
   is used (#360)


1.1.0 (2017-02-18)
------------------
 - Fix an attribute error when an complexType used xsd:anyType as base 
   restriction (#352)
 - Update asyncio transport to return requests.Response objects (#335)

 
1.0.0 (2017-01-31)
------------------
 - Use cgi.parse_header() to extract media_type for multipart/related checks 
   (#327)
 - Don't ignore nil elements, instead return None when parsing xml (#328)
 - Fix regression when using WSA with an older lxml version (#197)


0.27.0 (2017-01-28)
-------------------
 - Add support for SOAP attachments (multipart responses). (Dave Wapstra, #302)
 - Update xsd:anyType to return the xml elements when no type is given via the
   xsi:type attribute (#284)
 - Fix parsing Any elements when a restriction is used (soap-enc:array) (#322)


0.26.0 (2017-01-26)
-------------------
This release again introduces some backwords incompatibilties. The next release
will hopefully be 1.0 which will introduce semver.

 - **backwards-incompatible**: The Transport class now accepts a 
   ``requests.Session()`` object instead of ``http_auth`` and ``verify``. This
   allows for more flexibility.
 - **backwards-incompatible**: Zeep no longer sets a default cache backend.
   Please see http://docs.python-zeep.org/en/master/transport.html#caching for
   information about how to configure a cache.
 - Add ``zeep.xsd.SkipValue`` which instructs the serialize to ignore the 
   element.
 - Support duplicate target namespaces in the wsdl definition (#320)
 - Fix resolving element/types for xsd schema's with duplicate tns (#319)


0.25.0 (2017-01-23)
-------------------