@@ -8,6 +8,7 @@
    schema is now also used during resolving of the included schema. (#360)
  - Properly propagate the global flag for complex types when an xsd:restriction
    is used (#360)
+ - Filter out duplicate types and elements when dump the wsdl schema (#360)
 
 
 1.1.0 (2017-02-18)
